k8s/base/frontend-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hub.fliplabs.net/frontend-p1:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project1
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
